--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: afrânio melo # the website title (if blank, full name will be used inste
 first_name: afrânio
 middle_name: 
 last_name: melo
-email:
+email: afraeq@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -15,7 +15,7 @@ footer_text: >
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+lang: pt-br # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://afraniomelo.github.io # the base hostname & protocol for your site
@@ -55,10 +55,10 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: afraeq
+github_username: afraniomelo
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: afranio-melo-19bb8211b/ # your LinkedIn user name
+linkedin_username: afr%C3%A2nio-melo-19bb8211b # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 orcid_id: 0000-0002-7279-3981 # your ORCID ID
 medium_username: # your Medium username
@@ -72,7 +72,7 @@ wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 instagram_username: afra.nio_
-#kaggle_username: afrniomelo
+kaggle_username: afrniomelo
 
 contact_note: #>
   #You can even add a little note about which of these is the best way to reach you.
@@ -216,8 +216,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Melo
+  first_name: [Afrânio]
 
   style: apa
   locale: en
