--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -10,9 +10,20 @@ instagram:
   title: 'Instagram'
   fa-icon: 'fa-instagram'
 
+linkedin:
+  id: 'afr%C3%A2nio-melo-19bb8211b'
+  href: 'https://linkedin.com/in/'
+  title: 'LinkedIn'
+  fa-icon: 'fa-linkedin'
+  
 github:
   id: 'afraniomelo'
   href: 'https://github.com/'
   title: 'GitHub'
   fa-icon: 'fa-github'
 
+kaggle:
+  id: 'afrniomelo'
+  href: 'https://kaggle.com/'
+  title: 'Kaggle'
+  fa-icon: 'fa-kaggle'
