--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a> and <a href="https://pixabay.com" target="_blank">Pixabay</a>.
 keywords: data-science, machine-learning, literatura, engenharia-quimica, matlab, programacao, python, contos, escrita  # add your own keywords or leave empty
 
 lang: pt # the language of your site (for example: en, fr, cn, ru, etc.)
