--- a/_config.yml
+++ b/_config.yml
@@ -169,6 +169,10 @@ plugins:
   - jekyll-twitter-plugin
   - jemoji
   - jekyll-seo-tag
+  - jekyll-google_search_console_verification_file
+
+google_search_console:
+  verification_file_code: 9a7cba285146445b
 
 # Sitemap settings
 defaults:
