--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -1,5 +1,5 @@
 instagram:
-  id: 'afra.nio_'
+  id: 'afranio.lit'
   href: 'https://www.instagram.com/'
   title: 'Instagram'
   fa-icon: 'fa-instagram'
