--- a/_data/social-sci.yml
+++ b/_data/social-sci.yml
@@ -1,3 +1,9 @@
+scholar:
+	id: 'qklK--0AAAAJ'
+	href: 'https://scholar.google.com.br/citations?user='
+	title: 'Google Scholar'
+	ai-icon: 'ai-google-scholar'
+
 lattes:
   id: '3513511798041552'
   href: 'https://lattes.cnpq.br/'
