--- a/_config.yml
+++ b/_config.yml
@@ -60,9 +60,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: afraniomelo
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: afr%C3%A2nio-melo-19bb8211b # your LinkedIn user name
+linkedin_username: #afr%C3%A2nio-melo-19bb8211b # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
-orcid_id: 0000-0002-7279-3981 # your ORCID ID
+orcid_id: #0000-0002-7279-3981 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -73,8 +73,8 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
-instagram_username: afra.nio_
-kaggle_username: afrniomelo
+instagram_username: #afra.nio_
+kaggle_username: #afrniomelo
 
 contact_note: #>
   #You can even add a little note about which of these is the best way to reach you.
