Primeiro teste de tradução

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -28,5 +28,5 @@ projects:
     ds_ml: data science and machine learning (portuguese)
     matlab: matlab (portuguese)
     porta_de_perola: pearl door
-    nanoconsciencia: nanoconsciência (portuguese)
+    nanoconsciencia: nanoconsciousness
     voce_em_mim: you in me
