--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -37,3 +37,14 @@ projects:
   descriptions:
     nanoconsciencia: Publicado nas antologias Furos na carne (Bestiário, 2022) e Questão de tempo (Persona, 2022).
     porta_de_perola: Vencedor do Prêmio Literário Hernâni Cidade de 2021. 
+    python: ​Curso relâmpago de Python (notebook Jupyter).
+    c: Introdução à programação em C/C++ (slides e códigos).
+    eqe476: Disciplina oferecida aos cursos de Engenharia Química e Engenharia de Alimentos na Escola de Química/UFRJ.
+    eqe473: Disciplina oferecida ao curso de Engenharia Química na Escola de Química/UFRJ.
+    discurso_cd: Discurso de formatura da primeira turma de cientistas de dados egressos da Universidade Petrobras.
+    ds_ml: Data Science e Machine Learning na prática - Introdução e aplicações na indústria de processos (videoaulas, notebooks Jupyter e slides).
+    matlab: ​Introdução ao MATLAB para Engenharia (slides, exercícios e códigos).
+    voce_em_mim: Apresentado como projeto final na Oficina de Criação Literária da PUC-RS.
+    guinas: Publicado na antologia Furos na carne (Bestiário, 2022).
+    pvs: Disciplina oferecida no Pré-Vestibular Social da Fundação CECIERJ.
+    
