--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -9,6 +9,7 @@ descriptions:
   about: ciência, tecnologia & literatura
   literatura: Alguns de meus textos literários.
   ensino: Materiais de cursos e disciplinas.
+  publications: Lista de trabalhos científicos publicados.
 textos_pvs:
   titles:
     energia_quimica: energia química
