Avanços na tradução.

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -32,7 +32,7 @@ projects:
     guinas: yaws
     ds_ml: data science and machine learning (portuguese)
     matlab: matlab (portuguese)
-    porta_de_perola: pearl door
+    porta_de_perola: pearly door
     nanoconsciencia: nanoconsciousness
     voce_em_mim: you in me
   descriptions:
