--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -6,7 +6,7 @@ titles:
   ensino: teaching
   unk: page not found
 descriptions:
-  about: science, technology and literature
+  about: science, technology & literature
   literatura: Some of my literary texts.
   ensino: Course and subject materials (in Portuguese).
   ciencia: List of published scientific works.
