--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -40,6 +40,7 @@ projects:
     porta_de_perola: pearly door
     nanoconsciencia: nanoconsciousness
     voce_em_mim: you in me
+    tumimanda: tumimanda
   descriptions:
     nanoconsciencia: Published in the anthologies "Furos na carne" (Bestiário, 2022) and "Questão de tempo" (Persona, 2022).
     porta_de_perola: Winner of the Hernâni Cidade Literary Award 2021.
@@ -53,6 +54,7 @@ projects:
     voce_em_mim: Presented as the final project in the Creative Writing Workshop at PUC-RS.
     guinas: Published in the anthology "Furos na carne" (Bestiário, 2022).
     pvs: Discipline offered in the Social Pre-University course of the CECIERJ Foundation.
+    tumimanda: 2025.
   categories:
     pvs: disciplines
     python: courses
@@ -66,3 +68,4 @@ projects:
     porta_de_perola: stories
     nanoconsciencia: stories
     voce_em_mim: stories
+    tumimanda: stories
