--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -51,7 +51,7 @@ projects:
     discurso_cd: Graduation speech of the first class of data scientists graduating from Petrobras University.
     ds_ml: Data Science and Machine Learning in practice - Introduction and applications in the process industry (video lectures, Jupyter notebooks, and slides).
     matlab: Introduction to MATLAB for Engineering (slides, exercises, and codes).
-    voce_em_mim: Presented as the final project in the Creative Writing Workshop at PUC-RS.
+    voce_em_mim: Presented as the final project in the Creative Writing Workshop at PUC-RS (2021).
     guinas: Published in the anthology "Furos na carne" (Bestiário, 2022).
     pvs: Discipline offered in the Social Pre-University course of the CECIERJ Foundation.
     tumimanda: '2025'
