--- a/_i18n/pt-br.yml
+++ b/_i18n/pt-br.yml
@@ -51,7 +51,7 @@ projects:
     discurso_cd: Discurso de formatura da primeira turma de cientistas de dados egressos da Universidade Petrobras.
     ds_ml: Data Science e Machine Learning na prática - Introdução e aplicações na indústria de processos (videoaulas, notebooks Jupyter e slides).
     matlab: ​Introdução ao MATLAB para Engenharia (slides, exercícios e códigos).
-    voce_em_mim: Apresentado como projeto final na Oficina de Criação Literária da PUC-RS.
+    voce_em_mim: Apresentado como projeto final na Oficina de Criação Literária da PUC-RS (2021).
     guinas: Publicado na antologia Furos na carne (Bestiário, 2022).
     pvs: Disciplina oferecida no Pré-Vestibular Social da Fundação CECIERJ.
     tumimanda: '2025'
